[tool.poetry]
name = "nyt-connections-toolkit"
version = "0.1.0"
description = "Useful programs to interact with the NYT-Connections dataset"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
langchain = "^0.2.2"
anthropic = "^0.28.0"
python-dotenv = "^1.0.1"
google-generativeai = "^0.6.0"
openai = "^1.33.0"
debugpy = "^1.8.1"
torch = "^2.3.1"
transformers = "^4.41.2"
nltk = "^3.8.1"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
replicate = "^0.29.0"
k-means-constrained = "^0.7.3"
alphashape = "^1.3.1"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
typer = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
